# nas-rag-ingestion

./: .gitignore  AGENTS.md  README.md  REPORT.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
config/: config.example.yaml
requirements/: base.txt  dev.txt
scripts/: annotate_parsed_pdf.py  annotate_random_parsed_pdfs.py  index_corpus.py  parse_corpus.py
src/: __init__.py  logging_utils.py
src/ingestion/: __init__.py  parsing.py  runtime_config.py
src/ingestion/indexing/: __init__.py  indexer.py  state.py
src/ingestion/parsing/: __init__.py  constants.py  docling_adapter.py  extractors.py  models.py  parser.py  pdf_audit.py  semantic_extractor.py  state.py
tests/: test_annotate_random_parsed_pdfs.py  test_indexing_state.py  test_logging_utils.py  test_model_availability.py  test_package_metadata.py  test_parsing.py  test_pdf_audit.py  test_runtime_config.py  test_semantic_extractor.py
