[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nas-rag-ingestion"
version = "0.1.0"
description = "CPU-only local RAG ingestion pipeline with LlamaIndex, Qdrant, and OpenWebUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nas-rag-ingestion contributors" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

