[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-nas-ingestions"
version = "0.1.0"
description = "CPU-only local RAG ingestion pipeline with LlamaIndex, Qdrant, and OpenWebUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "structured-nas-ingestions contributors" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
pretty = true
files = ["src", "scripts", "tests"]
